--- a/Standard/BasicGameFrameworkLibrary/BasicGameFrameworkLibrary.csproj
+++ b/Standard/BasicGameFrameworkLibrary/BasicGameFrameworkLibrary.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
 
@@ -25,7 +24,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.8" />
 	  <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
 	  <PackageReference Include="FastEnumGenerator" Version="1.0.9" PrivateAssets="all" />
-
+	  <PackageReference Include="BlazorMVVMHelpersLibrary" Version="2.0.1" />
+	  <PackageReference Include="SvgHelper.Blazor" Version="4.0.1" />
 	  <PackageReference Include="MappingCloningExtensions" Version="2.0.4" PrivateAssets="all" />
 	  <PackageReference Include="MessengingHelpers" Version="2.0.1" />
 	  <PackageReference Include="MVVMFramework" Version="2.0.1" />
