Created Multiplayer Player Loader Processes. Also, included processes for doing the home network stuff. For now, the 2 choices are either azure or home hosting. For home hosting, there are some static variables to specify the ip address and the port.

--- a/Standard/MultiplayerGamesBlazorLoaderLibrary/MultiplayerGamesBlazorLoaderLibrary.csproj
+++ b/Standard/MultiplayerGamesBlazorLoaderLibrary/MultiplayerGamesBlazorLoaderLibrary.csproj
@@ -17,7 +17,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
-    <ProjectReference Include="..\GamePackageSignalRClasses\GamePackageSignalRClasses.csproj" />
+    <ProjectReference Include="..\GameLoaderBlazorLibrary\GameLoaderBlazorLibrary.csproj" />
+	  <ProjectReference Include="..\..\Generators\GamePackageDIGenerator\GamePackageDIGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
   
