--- a/Generators/CommandsGenerator/CommandsGenerator.csproj
+++ b/Generators/CommandsGenerator/CommandsGenerator.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Nullable>enable</Nullable>
+		<Version>1.0.1</Version>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<LangVersion>latest</LangVersion>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
