--- a/Generators/GamePackageDIGenerator/GamePackageDIGenerator.csproj
+++ b/Generators/GamePackageDIGenerator/GamePackageDIGenerator.csproj
@@ -3,6 +3,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Version>1.0.1</Version>
 		<LangVersion>latest</LangVersion>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 	</PropertyGroup>
