--- a/Generators/LabelGridGenerator/LabelGridGenerator.csproj
+++ b/Generators/LabelGridGenerator/LabelGridGenerator.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Version>1.0.1</Version>
 		<LangVersion>latest</LangVersion>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 	</PropertyGroup>
