--- a/Standard/GamePackageSignalRClasses/GamePackageSignalRClasses.csproj
+++ b/Standard/GamePackageSignalRClasses/GamePackageSignalRClasses.csproj
@@ -4,12 +4,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<Version>1.0.1</Version>
   </PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="BasicGameFrameworkLibrary" Version="1.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.8" />
 	</ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
-  </ItemGroup>
 
 </Project>
