--- a/Standard/MultiplayerGamesBlazorLoaderLibrary/MultiplayerGamesBlazorLoaderLibrary.csproj
+++ b/Standard/MultiplayerGamesBlazorLoaderLibrary/MultiplayerGamesBlazorLoaderLibrary.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <Version>1.0.1</Version>
   </PropertyGroup>
 
 
@@ -12,13 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="GameLoaderBlazorLibrary" Version="1.0.2" />
+    <PackageReference Include="GamePackageDIGenerator" Version="1.0.1" PrivateAssets="all" />
+    <PackageReference Include="GamePackageSignalRClasses" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
-    <ProjectReference Include="..\GameLoaderBlazorLibrary\GameLoaderBlazorLibrary.csproj" />
-	  <ProjectReference Include="..\..\Generators\GamePackageDIGenerator\GamePackageDIGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
   
