--- a/Standard/MahjongTilesBlazor/MahjongTilesBlazor.csproj
+++ b/Standard/MahjongTilesBlazor/MahjongTilesBlazor.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<Version>1.0.1</Version>
   </PropertyGroup>
 
 
@@ -100,10 +101,8 @@
     <EmbeddedResource Include="Resources\9.svg" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="BasicGameFrameworkLibrary" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.8" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
   </ItemGroup>
 
 </Project>
