--- a/Games/ClueBoardGame/ClueBoardGame.csproj
+++ b/Games/ClueBoardGame/ClueBoardGame.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BasicGameFrameworkLibrary" Version="2.0.2" />
+    <PackageReference Include="BasicGameFrameworkLibrary" Version="2.0.3" />
     <PackageReference Include="CommandsGenerator" Version="1.0.1" PrivateAssets="all" />
     <PackageReference Include="GamePackageDIGenerator" Version="1.0.1" PrivateAssets="all" />
     <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.1" PrivateAssets="all" />
