--- a/Templates/BasicMultiplayerGames/BasicMultiplayerGames.csproj
+++ b/Templates/BasicMultiplayerGames/BasicMultiplayerGames.csproj
@@ -11,16 +11,18 @@
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.8" />
-  </ItemGroup>
+	<ItemGroup>
+		
+		<PackageReference Include="LabelGridGenerator" Version="1.0.1"  PrivateAssets="all" />
+		
+		<PackageReference Include="BasicGameFrameworkLibrary" Version="2.0.6" />
+		<PackageReference Include="CommandsGenerator" Version="1.0.1" PrivateAssets="all" />
+		<PackageReference Include="GamePackageDIGenerator" Version="1.0.1" PrivateAssets="all" />
+		<PackageReference Include="GamePackageSerializeGenerator" Version="1.0.1" PrivateAssets="all" />
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Generators\CommandsGenerator\CommandsGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageDIGenerator\GamePackageDIGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageSerializeGenerator\GamePackageSerializeGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-	  <ProjectReference Include="..\..\Generators\LabelGridGenerator\LabelGridGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Standard\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
-  </ItemGroup>
+
+	</ItemGroup>
+
+  
 
 </Project>
