--- a/Templates/BasicMultiplayerMiscCardGames/BasicMultiplayerMiscCardGames.csproj
+++ b/Templates/BasicMultiplayerMiscCardGames/BasicMultiplayerMiscCardGames.csproj
@@ -12,18 +12,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.8" />
 	  <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
 	  <PackageReference Include="FastEnumGenerator" Version="1.0.9" PrivateAssets="all" />
+  <PackageReference Include="LabelGridGenerator" Version="1.0.1"  PrivateAssets="all" />
+
+	  <PackageReference Include="BasicGameFrameworkLibrary" Version="2.0.6" />
+	  <PackageReference Include="CommandsGenerator" Version="1.0.1" PrivateAssets="all" />
+	  <PackageReference Include="GamePackageDIGenerator" Version="1.0.1" PrivateAssets="all" />
+	  <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.1" PrivateAssets="all" />
+	  <PackageReference Include="ScoreBoardGenerator" Version="1.0.3" PrivateAssets="all"  />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Generators\CommandsGenerator\CommandsGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageDIGenerator\GamePackageDIGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageSerializeGenerator\GamePackageSerializeGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-	  <ProjectReference Include="..\..\Generators\LabelGridGenerator\LabelGridGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-	  <ProjectReference Include="..\..\Generators\ScoreBoardGenerator\ScoreBoardGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Standard\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
-  </ItemGroup>
+ 
 
 </Project>
