--- a/Templates/SinglePlayerCardGames/SinglePlayerCardGames.csproj
+++ b/Templates/SinglePlayerCardGames/SinglePlayerCardGames.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -13,13 +13,12 @@
 
   <ItemGroup>
 	  <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
+	  <PackageReference Include="BasicGameFrameworkLibrary" Version="2.0.6" />
+	  <PackageReference Include="CommandsGenerator" Version="1.0.1" PrivateAssets="all" />
+	  <PackageReference Include="GamePackageDIGenerator" Version="1.0.1" PrivateAssets="all" />
+	  <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.1" PrivateAssets="all" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Generators\CommandsGenerator\CommandsGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageDIGenerator\GamePackageDIGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageSerializeGenerator\GamePackageSerializeGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Standard\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
-  </ItemGroup>
+  
 
 </Project>
