--- a/Templates/SinglePlayerMiscGames/SinglePlayerMiscGames.csproj
+++ b/Templates/SinglePlayerMiscGames/SinglePlayerMiscGames.csproj
@@ -11,13 +11,14 @@
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="BasicGameFrameworkLibrary" Version="2.0.6" />
+		<PackageReference Include="CommandsGenerator" Version="1.0.1" PrivateAssets="all" />
+		<PackageReference Include="GamePackageDIGenerator" Version="1.0.1" PrivateAssets="all" />
+		<PackageReference Include="GamePackageSerializeGenerator" Version="1.0.1" PrivateAssets="all" />
+	</ItemGroup>
  
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Generators\CommandsGenerator\CommandsGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageDIGenerator\GamePackageDIGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageSerializeGenerator\GamePackageSerializeGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Standard\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
-  </ItemGroup>
+  
 
 </Project>
