--- a/Templates/SolitaireCardGamesSimple/SolitaireCardGamesSimple.csproj
+++ b/Templates/SolitaireCardGamesSimple/SolitaireCardGamesSimple.csproj
@@ -13,15 +13,16 @@
 
   <ItemGroup>
 	  <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
+	  <PackageReference Include="LabelGridGenerator" Version="1.0.1"  PrivateAssets="all" />
 	  <PackageReference Include="MappingCloningExtensions" Version="2.0.4" PrivateAssets="all" />
+  <PackageReference Include="BasicGameFrameworkLibrary" Version="2.0.6" />
+		<PackageReference Include="CommandsGenerator" Version="1.0.1" PrivateAssets="all" />
+		<PackageReference Include="GamePackageDIGenerator" Version="1.0.1" PrivateAssets="all" />
+		<PackageReference Include="GamePackageSerializeGenerator" Version="1.0.1" PrivateAssets="all" />
+	  
+	  
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\Generators\CommandsGenerator\CommandsGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageDIGenerator\GamePackageDIGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Generators\GamePackageSerializeGenerator\GamePackageSerializeGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-	  <ProjectReference Include="..\..\Generators\LabelGridGenerator\LabelGridGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    <ProjectReference Include="..\..\Standard\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
-  </ItemGroup>
+ 
 
 </Project>
