--- a/Games/Rook/Rook.csproj
+++ b/Games/Rook/Rook.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,6 +6,14 @@
     <Version>7.0.1</Version>
     
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\RookBird.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\RookBird.svg" />
+  </ItemGroup>
 
 
   <ItemGroup>
