Added options so options are filtered for multiplayer games.

--- a/Standard/GameLoaderBlazorLibrary/GameLoaderBlazorLibrary.csproj
+++ b/Standard/GameLoaderBlazorLibrary/GameLoaderBlazorLibrary.csproj
@@ -10,6 +10,9 @@
 		<PackageReference Include="BasicBlazorLibrary" Version="7.0.25" />
 		<PackageReference Include="BasicGameFrameworkLibrary" Version="7.0.6" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
+	</ItemGroup>
 
 
 
