--- a/Standard/GameLoaderBlazorLibrary/GameLoaderBlazorLibrary.csproj
+++ b/Standard/GameLoaderBlazorLibrary/GameLoaderBlazorLibrary.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-	<Version>7.0.1</Version>
+	<Version>7.0.3</Version>
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="BasicBlazorLibrary" Version="7.0.25" />
