--- a/Games/MonopolyDicedGame/MonopolyDicedGame.csproj
+++ b/Games/MonopolyDicedGame/MonopolyDicedGame.csproj
@@ -1,11 +1,10 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
-    
+    <Version>8.0.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <None Remove="Resources\blackelectric.svg" />
     <None Remove="Resources\blacktrain.svg" />
@@ -21,7 +20,6 @@
     <None Remove="Resources\whitetrain.svg" />
     <None Remove="Resources\whitewaterworks.svg" />
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Include="Resources\blackelectric.svg" />
     <EmbeddedResource Include="Resources\blacktrain.svg" />
@@ -37,25 +35,15 @@
     <EmbeddedResource Include="Resources\whitetrain.svg" />
     <EmbeddedResource Include="Resources\whitewaterworks.svg" />
   </ItemGroup>
-
-
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
-
-	<ItemGroup>
-		
-		<PackageReference Include="LabelGridGenerator" Version="1.0.2" PrivateAssets="all" />
-		
-		<PackageReference Include="BasicGameFrameworkLibrary" Version="8.0.13" />
-		<PackageReference Include="CommandsGenerator" Version="1.0.2" PrivateAssets="all" />
-		<PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
-		<PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
-		<PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
-
-
-	</ItemGroup>
-
-  
-
+  <ItemGroup>
+    <PackageReference Include="LabelGridGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="BasicGameFrameworkLibrary" Version="8.0.13" />
+    <PackageReference Include="CommandsGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
+  </ItemGroup>
 </Project>
