--- a/Games/ClueCardGame/ClueCardGame.csproj
+++ b/Games/ClueCardGame/ClueCardGame.csproj
@@ -1,11 +1,10 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
-    
+    <Version>8.0.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <None Remove="Resources\card1.png" />
     <None Remove="Resources\card10.png" />
@@ -23,7 +22,6 @@
     <None Remove="Resources\card8.png" />
     <None Remove="Resources\card9.png" />
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Include="Resources\card1.png" />
     <EmbeddedResource Include="Resources\card10.png" />
@@ -41,24 +39,17 @@
     <EmbeddedResource Include="Resources\card8.png" />
     <EmbeddedResource Include="Resources\card9.png" />
   </ItemGroup>
-
-
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
-
   <ItemGroup>
-	  <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
-	  <PackageReference Include="FastEnumGenerator" Version="1.0.9" PrivateAssets="all" />
-  <PackageReference Include="LabelGridGenerator" Version="1.0.2" PrivateAssets="all" />
-
-	  <PackageReference Include="BasicGameFrameworkLibrary" Version="8.0.13" />
-	  <PackageReference Include="CommandsGenerator" Version="1.0.2" PrivateAssets="all" />
-	  <PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
-	  <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
-	  <PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
+    <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
+    <PackageReference Include="FastEnumGenerator" Version="1.0.9" PrivateAssets="all" />
+    <PackageReference Include="LabelGridGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="BasicGameFrameworkLibrary" Version="8.0.13" />
+    <PackageReference Include="CommandsGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
   </ItemGroup>
-
- 
-
 </Project>
