--- a/Games/SorryDicedGame/SorryDicedGame.csproj
+++ b/Games/SorryDicedGame/SorryDicedGame.csproj
@@ -21,6 +21,7 @@
 	  <PackageReference Include="CommandsGenerator" Version="1.0.2" PrivateAssets="all" />
 	  <PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
 	  <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
+	  <PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
   </ItemGroup>
 
  
