--- a/Games/DealCardGame/DealCardGame.csproj
+++ b/Games/DealCardGame/DealCardGame.csproj
@@ -1,10 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\hotel.svg" />
+    <None Remove="Resources\house.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\hotel.svg" />
+    <EmbeddedResource Include="Resources\house.svg" />
+  </ItemGroup>
 
 
   <ItemGroup>
