Use the new feature for changing state for custom screens.

--- a/Games/DealCardGame/DealCardGame.csproj
+++ b/Games/DealCardGame/DealCardGame.csproj
@@ -33,6 +33,10 @@
 	  <PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Standard\BasicGameFrameworkLibrary\BasicGameFrameworkLibrary.csproj" />
+  </ItemGroup>
+
  
 
 </Project>
