--- a/Games/DealCardGame/DealCardGame.csproj
+++ b/Games/DealCardGame/DealCardGame.csproj
@@ -30,6 +30,7 @@
 	  <PackageReference Include="CommandsGenerator" Version="1.0.2" PrivateAssets="all" />
 	  <PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
 	  <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
+	  <PackageReference Include="MappingCloningExtensions" Version="2.0.4" PrivateAssets="all" />
 	  <PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
   </ItemGroup>
 
