Updated game package libraries to 9

--- a/Standard/BasicGameFrameworkLibrary/BasicGameFrameworkLibrary.csproj
+++ b/Standard/BasicGameFrameworkLibrary/BasicGameFrameworkLibrary.csproj
@@ -1,40 +1,34 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
-	  <Version>8.0.21</Version>
+    <Version>9.0.1</Version>
   </PropertyGroup>
-
-
- 
-	<ItemGroup>
-		<EmbeddedResource Include="Resources\deckofcardback.svg" />
-		<EmbeddedResource Include="Resources\Dice1.svg" />
-		<EmbeddedResource Include="Resources\Dice2.svg" />
-		<EmbeddedResource Include="Resources\Dice3.svg" />
-		<EmbeddedResource Include="Resources\Dice4.svg" />
-		<EmbeddedResource Include="Resources\Dice5.svg" />
-		<EmbeddedResource Include="Resources\Dice6.svg" />
-	</ItemGroup>
   <ItemGroup>
-    <PackageReference Include="BasicBlazorLibrary" Version="8.0.1" />
+    <EmbeddedResource Include="Resources\deckofcardback.svg" />
+    <EmbeddedResource Include="Resources\Dice1.svg" />
+    <EmbeddedResource Include="Resources\Dice2.svg" />
+    <EmbeddedResource Include="Resources\Dice3.svg" />
+    <EmbeddedResource Include="Resources\Dice4.svg" />
+    <EmbeddedResource Include="Resources\Dice5.svg" />
+    <EmbeddedResource Include="Resources\Dice6.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="BasicBlazorLibrary" Version="9.0.1" />
     <PackageReference Include="CommandsGenerator" Version="1.0.2" PrivateAssets="all" />
-    <PackageReference Include="CommonBasicLibraries" Version="8.0.1" />
+    <PackageReference Include="CommonBasicLibraries" Version="9.0.1" />
     <PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
     <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
     <PackageReference Include="LabelGridGenerator" Version="1.0.2" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.0" />
-	  <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
-	  <PackageReference Include="FastEnumGenerator" Version="1.0.9" PrivateAssets="all" />
-	  <PackageReference Include="BlazorMVVMHelpersLibrary" Version="8.0.1" />
-	  <PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
-	  <PackageReference Include="SvgHelper.Blazor" Version="8.0.1" />
-	  <PackageReference Include="MappingCloningExtensions" Version="2.0.4" PrivateAssets="all" />
-	  <PackageReference Include="MessengingHelpers" Version="8.0.1" />
-	  <PackageReference Include="MVVMFramework" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
+    <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
+    <PackageReference Include="FastEnumGenerator" Version="1.0.9" PrivateAssets="all" />
+    <PackageReference Include="BlazorMVVMHelpersLibrary" Version="9.0.1" />
+    <PackageReference Include="ScoreBoardGenerator" Version="1.0.4" PrivateAssets="all" />
+    <PackageReference Include="SvgHelper.Blazor" Version="9.0.1" />
+    <PackageReference Include="MappingCloningExtensions" Version="2.0.4" PrivateAssets="all" />
+    <PackageReference Include="MessengingHelpers" Version="9.0.1" />
+    <PackageReference Include="MVVMFramework" Version="9.0.1" />
   </ItemGroup>
-
- 
-
 </Project>
