--- a/Standard/GameLoaderBlazorLibrary/GameLoaderBlazorLibrary.csproj
+++ b/Standard/GameLoaderBlazorLibrary/GameLoaderBlazorLibrary.csproj
@@ -1,25 +1,16 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-	<Version>8.0.5</Version>
+    <Version>9.0.1</Version>
   </PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="BasicBlazorLibrary" Version="8.0.4" />
-		<PackageReference Include="BasicGameFrameworkLibrary" Version="8.0.4" />
-	</ItemGroup>
-	
-
-
-
+  <ItemGroup>
+    <PackageReference Include="BasicBlazorLibrary" Version="9.0.1" />
+    <PackageReference Include="BasicGameFrameworkLibrary" Version="9.0.1" />
+  </ItemGroup>
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
-
- 
-
-  
-
 </Project>
