--- a/Standard/GamePackageSignalRClasses/GamePackageSignalRClasses.csproj
+++ b/Standard/GamePackageSignalRClasses/GamePackageSignalRClasses.csproj
@@ -1,14 +1,13 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Version>8.0.5</Version>
+    <Version>9.0.1</Version>
   </PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="BasicGameFrameworkLibrary" Version="8.0.18" />
-		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.0" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="BasicGameFrameworkLibrary" Version="9.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.0" />
+  </ItemGroup>
 </Project>
