--- a/Standard/MultiplayerGamesBlazorLoaderLibrary/MultiplayerGamesBlazorLoaderLibrary.csproj
+++ b/Standard/MultiplayerGamesBlazorLoaderLibrary/MultiplayerGamesBlazorLoaderLibrary.csproj
@@ -1,24 +1,18 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-	  <Version>8.0.5</Version>
+    <Version>9.0.1</Version>
   </PropertyGroup>
-
-
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="GameLoaderBlazorLibrary" Version="8.0.5" />
+    <PackageReference Include="GameLoaderBlazorLibrary" Version="9.0.1" />
     <PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
-    <PackageReference Include="GamePackageSignalRClasses" Version="8.0.4" />
-	  <PackageReference Include="BasicGameFrameworkLibrary" Version="8.0.18" />
+    <PackageReference Include="GamePackageSignalRClasses" Version="9.0.1" />
+    <PackageReference Include="BasicGameFrameworkLibrary" Version="9.0.1" />
   </ItemGroup>
-
-  
-
 </Project>
