--- a/Standard/MultiplayerSignalRHubClasses/MultiplayerSignalRHubClasses.csproj
+++ b/Standard/MultiplayerSignalRHubClasses/MultiplayerSignalRHubClasses.csproj
@@ -1,16 +1,15 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <Version>8.0.5</Version>
+    <Version>9.0.1</Version>
   </PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="BasicGameFrameworkLibrary" Version="8.0.4" />
-		<PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
-		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-		<PackageReference Include="Microsoft.Azure.SignalR" Version="1.24.0" />
-	</ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="BasicGameFrameworkLibrary" Version="9.0.1" />
+    <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.28.0" />
+  </ItemGroup>
 </Project>
