--- a/Standard/BasicGameFrameworkLibrary/BasicGameFrameworkLibrary.csproj
+++ b/Standard/BasicGameFrameworkLibrary/BasicGameFrameworkLibrary.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <Version>9.0.1</Version>
+    <RunPostBuildAppCondition Condition="'$(Configuration)' == 'Release'">true</RunPostBuildAppCondition>
+    <FeedType>Public</FeedType>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\deckofcardback.svg" />
@@ -31,4 +33,7 @@
     <PackageReference Include="MessengingHelpers" Version="9.0.1" />
     <PackageReference Include="MVVMFramework" Version="9.0.1" />
   </ItemGroup>
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="C:\VS\OneNet\Apps\CommandLines\PostBuildPackageHandler\bin\Release\net9.0\PostBuildPackageHandler.exe $(ProjectName) $(ProjectDir) $(ProjectFileName) $(TargetDir)" Condition="'$(Configuration)' == 'Release' and '$(RunPostBuildAppCondition)' == 'true'" />
+  </Target>
 </Project>
