--- a/Games/DealCardGame/DealCardGame.csproj
+++ b/Games/DealCardGame/DealCardGame.csproj
@@ -17,6 +17,7 @@
     <SupportedPlatform Include="browser" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CommonBasicLibraries" Version="9.0.17" />
     <PackageReference Include="EventAggregatorGenerator" Version="1.0.13" PrivateAssets="all" />
     <PackageReference Include="FastEnumGenerator" Version="1.0.10" PrivateAssets="all" />
     <PackageReference Include="LabelGridGenerator" Version="1.0.2" PrivateAssets="all" />
