Refactor game logic and enhance scoring mechanics
- Updated `BowlingDiceListBlazor` to manage commands with a new `CommandContainer`.
- Modified hit detection in `BowlingSingleDiceBlazor` to include animation state.
- Added `FastEnumGenerator` package reference in the project file.
- Clarified auto-save functionality in `BowlingDiceGameDetailClass`.
- Refactored `BowlingDiceGameGameContainer` to use a parameterized constructor.
- Changed `FrameList` in `BowlingDiceGamePlayerItem` to an empty array.
- Introduced `RollDistribution` property in `BowlingDiceGameSaveInfo`.
- Added `IsAnimatingHit` property to `SingleDiceInfo`.
- Refactored `BowlingDiceGameMainGameClass` constructor and added methods for roll distribution and scoring.
- Updated `BowlingDiceSet` to include a command container and refresh methods.
- Introduced `RollContext`, `RollDistribution`, and `BowlingRollFactory` for managing roll data.
- Added `ScoreGenerator` to calculate scores based on player luck profiles.
- Defined `EnumLuckProfile` to categorize player luck profiles for scoring.
The purpose of this for the bowling dice game was to make it where players don't get related scores everytime.

--- a/Games/BowlingDiceGame/BowlingDiceGame.csproj
+++ b/Games/BowlingDiceGame/BowlingDiceGame.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="GamePackageDIGenerator" Version="1.0.2" PrivateAssets="all" />
     <PackageReference Include="GamePackageSerializeGenerator" Version="1.0.2" PrivateAssets="all" />
     <PackageReference Include="LabelGridGenerator" Version="1.0.2" PrivateAssets="all" />
+	  <PackageReference Include="FastEnumGenerator" Version="1.0.10" PrivateAssets="all" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\bowlingdice.svg" />
